Clean with SonarCube